--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -118,87 +118,87 @@ jobs:
           retention-days: 60
 
 
-  Build_ARM64:
-    runs-on: windows-2019
-    timeout-minutes: 45
+  # Build_ARM64:
+  #   runs-on: windows-2019
+  #   timeout-minutes: 45
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v4
 
-      - name: Setup msbuild
-        uses: microsoft/setup-msbuild@v1.3
+  #     - name: Setup msbuild
+  #       uses: microsoft/setup-msbuild@v1.3
 
-    #
-    # Compile Sandboxie Core
-    #
+  #   #
+  #   # Compile Sandboxie Core
+  #   #
 
-      - name: Build Sandboxie x86 (dll's & svc)
-        run: msbuild /t:build Sandboxie\SandboxDll.sln /p:Configuration="SbieRelease" /p:Platform=Win32 -maxcpucount:8
+  #     - name: Build Sandboxie x86 (dll's & svc)
+  #       run: msbuild /t:build Sandboxie\SandboxDll.sln /p:Configuration="SbieRelease" /p:Platform=Win32 -maxcpucount:8
 
-      - name: Build Sandboxie ARM64 (all)
-        run: msbuild /t:build Sandboxie\Sandbox.sln /p:Configuration="SbieRelease" /p:Platform=ARM64 -maxcpucount:8
+  #     - name: Build Sandboxie ARM64 (all)
+  #       run: msbuild /t:build Sandboxie\Sandbox.sln /p:Configuration="SbieRelease" /p:Platform=ARM64 -maxcpucount:8
 
-      - name: Build Sandboxie ARM64EC (dll)
-        run: msbuild /t:build Sandboxie\SandboxDll.sln /p:Configuration="SbieRelease" /p:Platform=ARM64EC -maxcpucount:8
+  #     - name: Build Sandboxie ARM64EC (dll)
+  #       run: msbuild /t:build Sandboxie\SandboxDll.sln /p:Configuration="SbieRelease" /p:Platform=ARM64EC -maxcpucount:8
 
-    #
-    # Prepare Qt Framework
-    #
+  #   #
+  #   # Prepare Qt Framework
+  #   #
 
-      - name: Install Qt6 ARM64
-        uses: jurplel/install-qt-action@v3
-        with:
-      #    version: '6.2.4'
-          version: '6.3.1'
-      #    dir: ..
-      #    arch:  ${{ matrix.qt-target }}
-          arch:  'win64_msvc2019_arm64'
-      #    tools: 'tools_qtcreator,4.14.0-0-202012170949,qt.tools.qtcreator'
-          cache: true
+  #     - name: Install Qt6 ARM64
+  #       uses: jurplel/install-qt-action@v3
+  #       with:
+  #     #    version: '6.2.4'
+  #         version: '6.3.1'
+  #     #    dir: ..
+  #     #    arch:  ${{ matrix.qt-target }}
+  #         arch:  'win64_msvc2019_arm64'
+  #     #    tools: 'tools_qtcreator,4.14.0-0-202012170949,qt.tools.qtcreator'
+  #         cache: true
 
-      - name: Installing Jom
-      #  if: steps.cache-qt.outputs.cache-hit != 'true'
-        run: SandboxiePlus\install_jom.cmd
+  #     - name: Installing Jom
+  #     #  if: steps.cache-qt.outputs.cache-hit != 'true'
+  #       run: SandboxiePlus\install_jom.cmd
 
-    #
-    # Compile Sandboxie Plus
-    #
+  #   #
+  #   # Compile Sandboxie Plus
+  #   #
 
-      - name: Build Sandboxie-Plus ARM64
-        run: SandboxiePlus\qmake_plus.cmd ARM64
+  #     - name: Build Sandboxie-Plus ARM64
+  #       run: SandboxiePlus\qmake_plus.cmd ARM64
 
-      - name: Build SbieShell ARM64
-        run: msbuild /t:restore,build -p:RestorePackagesConfig=true SandboxiePlus\SbieShell\SbieShell.sln /p:Configuration="Release" /p:Platform=ARM64
+  #     - name: Build SbieShell ARM64
+  #       run: msbuild /t:restore,build -p:RestorePackagesConfig=true SandboxiePlus\SbieShell\SbieShell.sln /p:Configuration="Release" /p:Platform=ARM64
 
-    #
-    # Compile Sandboxie Tools
-    #
+  #   #
+  #   # Compile Sandboxie Tools
+  #   #
 
-      - name: Build Sandboxie-Tools ARM64
-        run: msbuild /t:build SandboxieTools\SandboxieTools.sln /p:Configuration="Release" /p:Platform=ARM64 -maxcpucount:8
+  #     - name: Build Sandboxie-Tools ARM64
+  #       run: msbuild /t:build SandboxieTools\SandboxieTools.sln /p:Configuration="Release" /p:Platform=ARM64 -maxcpucount:8
 
-    #
-    # Merge everything together
-    #
+  #   #
+  #   # Merge everything together
+  #   #
 
-      - name: Get openssl binaries
-        run: Installer\get_openssl.cmd
+  #     - name: Get openssl binaries
+  #       run: Installer\get_openssl.cmd
 
-      - name: Get 7z binaries
-        run: Installer\get_7zip.cmd
+  #     - name: Get 7z binaries
+  #       run: Installer\get_7zip.cmd
 
-      - name: Merging Build
-        run: Installer\copy_build.cmd ARM64
+  #     - name: Merging Build
+  #       run: Installer\copy_build.cmd ARM64
 
-      - name: Upload Sandboxie ARM64
-        if: github.ref == 'refs/heads/master' && github.event_name != 'pull_request'
-        uses: actions/upload-artifact@v3
-        with:
-          name: Sandboxie_ARM64
-          path: |
-            Installer/SbiePlus_a64/*
-          retention-days: 60
+  #     - name: Upload Sandboxie ARM64
+  #       if: github.ref == 'refs/heads/master' && github.event_name != 'pull_request'
+  #       uses: actions/upload-artifact@v3
+  #       with:
+  #         name: Sandboxie_ARM64
+  #         path: |
+  #           Installer/SbiePlus_a64/*
+  #         retention-days: 60
 
 
   Build_x86:
